@@ -1191,6 +1191,64 @@ operator|.
 name|LONGVARCHAR
 expr_stmt|;
 block|}
+comment|// driver reports column size that we should "translate" to the column precision
+comment|// see CAY-2694 for details
+if|if
+condition|(
+name|type
+operator|==
+name|Types
+operator|.
+name|TIME
+condition|)
+block|{
+name|precision
+operator|=
+name|Math
+operator|.
+name|max
+argument_list|(
+literal|0
+argument_list|,
+name|size
+operator|-
+literal|9
+argument_list|)
+expr_stmt|;
+name|size
+operator|=
+operator|-
+literal|1
+expr_stmt|;
+block|}
+if|else if
+condition|(
+name|type
+operator|==
+name|Types
+operator|.
+name|TIMESTAMP
+condition|)
+block|{
+name|precision
+operator|=
+name|Math
+operator|.
+name|max
+argument_list|(
+literal|0
+argument_list|,
+name|size
+operator|-
+literal|20
+argument_list|)
+expr_stmt|;
+name|size
+operator|=
+operator|-
+literal|1
+expr_stmt|;
+block|}
 return|return
 name|super
 operator|.
@@ -1569,7 +1627,111 @@ name|type
 argument_list|)
 expr_stmt|;
 comment|// append size and precision (if applicable)s
+name|appendLengthAndScale
+argument_list|(
+name|sqlBuffer
+argument_list|,
+name|column
+argument_list|)
+expr_stmt|;
+name|sqlBuffer
+operator|.
+name|append
+argument_list|(
+name|column
+operator|.
+name|isMandatory
+argument_list|()
+condition|?
+literal|" NOT NULL"
+else|:
+literal|" NULL"
+argument_list|)
+expr_stmt|;
 if|if
+condition|(
+name|column
+operator|.
+name|isGenerated
+argument_list|()
+condition|)
+block|{
+name|sqlBuffer
+operator|.
+name|append
+argument_list|(
+literal|" AUTO_INCREMENT"
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+specifier|private
+name|void
+name|appendLengthAndScale
+parameter_list|(
+name|StringBuffer
+name|sqlBuffer
+parameter_list|,
+name|DbAttribute
+name|column
+parameter_list|)
+block|{
+if|if
+condition|(
+name|column
+operator|.
+name|getType
+argument_list|()
+operator|==
+name|Types
+operator|.
+name|TIME
+operator|||
+name|column
+operator|.
+name|getType
+argument_list|()
+operator|==
+name|Types
+operator|.
+name|TIMESTAMP
+condition|)
+block|{
+name|int
+name|scale
+init|=
+name|column
+operator|.
+name|getScale
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|scale
+operator|>=
+literal|0
+condition|)
+block|{
+name|sqlBuffer
+operator|.
+name|append
+argument_list|(
+literal|'('
+argument_list|)
+operator|.
+name|append
+argument_list|(
+name|scale
+argument_list|)
+operator|.
+name|append
+argument_list|(
+literal|')'
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+if|else if
 condition|(
 name|typeSupportsLength
 argument_list|(
@@ -1670,36 +1832,6 @@ literal|')'
 argument_list|)
 expr_stmt|;
 block|}
-block|}
-name|sqlBuffer
-operator|.
-name|append
-argument_list|(
-name|column
-operator|.
-name|isMandatory
-argument_list|()
-condition|?
-literal|" NOT NULL"
-else|:
-literal|" NULL"
-argument_list|)
-expr_stmt|;
-if|if
-condition|(
-name|column
-operator|.
-name|isGenerated
-argument_list|()
-condition|)
-block|{
-name|sqlBuffer
-operator|.
-name|append
-argument_list|(
-literal|" AUTO_INCREMENT"
-argument_list|)
-expr_stmt|;
 block|}
 block|}
 annotation|@
