@@ -19,6 +19,16 @@ end_package
 
 begin_import
 import|import
+name|java
+operator|.
+name|sql
+operator|.
+name|Types
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -134,6 +144,18 @@ operator|.
 name|junit
 operator|.
 name|Test
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|junit
+operator|.
+name|Assert
+operator|.
+name|assertEquals
 import|;
 end_import
 
@@ -369,6 +391,276 @@ name|indexOf
 argument_list|(
 literal|"PK2"
 argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+specifier|public
+name|void
+name|testCreateTableAppendColumnWithTimeAndTimestamp
+parameter_list|()
+block|{
+name|MySQLAdapter
+name|adapter
+init|=
+name|objectFactory
+operator|.
+name|newInstance
+argument_list|(
+name|MySQLAdapter
+operator|.
+name|class
+argument_list|,
+name|MySQLAdapter
+operator|.
+name|class
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|DbEntity
+name|e
+init|=
+operator|new
+name|DbEntity
+argument_list|(
+literal|"Test"
+argument_list|)
+decl_stmt|;
+name|DbAttribute
+name|dblPrec1
+init|=
+operator|new
+name|DbAttribute
+argument_list|(
+literal|"dbl1"
+argument_list|)
+decl_stmt|;
+name|dblPrec1
+operator|.
+name|setType
+argument_list|(
+name|Types
+operator|.
+name|TIMESTAMP
+argument_list|)
+expr_stmt|;
+name|dblPrec1
+operator|.
+name|setScale
+argument_list|(
+literal|3
+argument_list|)
+expr_stmt|;
+name|e
+operator|.
+name|addAttribute
+argument_list|(
+name|dblPrec1
+argument_list|)
+expr_stmt|;
+name|DbAttribute
+name|dblPrec2
+init|=
+operator|new
+name|DbAttribute
+argument_list|(
+literal|"dbl2"
+argument_list|)
+decl_stmt|;
+name|dblPrec2
+operator|.
+name|setType
+argument_list|(
+name|Types
+operator|.
+name|TIME
+argument_list|)
+expr_stmt|;
+name|dblPrec2
+operator|.
+name|setScale
+argument_list|(
+literal|6
+argument_list|)
+expr_stmt|;
+name|e
+operator|.
+name|addAttribute
+argument_list|(
+name|dblPrec2
+argument_list|)
+expr_stmt|;
+name|String
+name|sql
+init|=
+name|adapter
+operator|.
+name|createTable
+argument_list|(
+name|e
+argument_list|)
+decl_stmt|;
+comment|// CAY-2694.
+name|assertTrue
+argument_list|(
+name|sql
+operator|.
+name|indexOf
+argument_list|(
+literal|"TIME(6)"
+argument_list|)
+operator|>
+literal|0
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|sql
+operator|.
+name|indexOf
+argument_list|(
+literal|"DATETIME(3)"
+argument_list|)
+operator|>
+literal|0
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"CREATE TABLE Test (dbl1 DATETIME(3) NULL, dbl2 TIME(6) NULL) ENGINE=InnoDB"
+argument_list|,
+name|sql
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+specifier|public
+name|void
+name|testCreateTableAppendColumnWithTimeAndTimestampWihoutScale
+parameter_list|()
+block|{
+name|MySQLAdapter
+name|adapter
+init|=
+name|objectFactory
+operator|.
+name|newInstance
+argument_list|(
+name|MySQLAdapter
+operator|.
+name|class
+argument_list|,
+name|MySQLAdapter
+operator|.
+name|class
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|DbEntity
+name|e
+init|=
+operator|new
+name|DbEntity
+argument_list|(
+literal|"Test"
+argument_list|)
+decl_stmt|;
+name|DbAttribute
+name|dblPrec1
+init|=
+operator|new
+name|DbAttribute
+argument_list|(
+literal|"dbl1"
+argument_list|)
+decl_stmt|;
+name|dblPrec1
+operator|.
+name|setType
+argument_list|(
+name|Types
+operator|.
+name|TIMESTAMP
+argument_list|)
+expr_stmt|;
+name|e
+operator|.
+name|addAttribute
+argument_list|(
+name|dblPrec1
+argument_list|)
+expr_stmt|;
+name|DbAttribute
+name|dblPrec2
+init|=
+operator|new
+name|DbAttribute
+argument_list|(
+literal|"dbl2"
+argument_list|)
+decl_stmt|;
+name|dblPrec2
+operator|.
+name|setType
+argument_list|(
+name|Types
+operator|.
+name|TIME
+argument_list|)
+expr_stmt|;
+name|e
+operator|.
+name|addAttribute
+argument_list|(
+name|dblPrec2
+argument_list|)
+expr_stmt|;
+name|String
+name|sql
+init|=
+name|adapter
+operator|.
+name|createTable
+argument_list|(
+name|e
+argument_list|)
+decl_stmt|;
+comment|// CAY-2694.
+name|assertTrue
+argument_list|(
+name|sql
+operator|.
+name|indexOf
+argument_list|(
+literal|"TIME"
+argument_list|)
+operator|>
+literal|0
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|sql
+operator|.
+name|indexOf
+argument_list|(
+literal|"DATETIME"
+argument_list|)
+operator|>
+literal|0
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"CREATE TABLE Test (dbl1 DATETIME NULL, dbl2 TIME NULL) ENGINE=InnoDB"
+argument_list|,
+name|sql
 argument_list|)
 expr_stmt|;
 block|}
